many many changes

--- a/Abkuerzungen.tex
+++ b/Abkuerzungen.tex
@@ -13,13 +13,16 @@
 % Die Option (in den eckigen Klammern) enthält das längste Label oder
 % einen Platzhalter der die Breite der linken Spalte bestimmt.
 \begin{acronym}[WWWWW]
+	\acro{ABAP}{Advanced Business Application Programming}
+	\acro{ALV}{ABAP List View}
 	\acro{APO}{Advanced Planning and Optimization}
+	\acro{BAdI}{Business Add-In}
+	\acro{ERM}{En\-ti\-ty-Re\-la\-tion\-ship-Mo\-dell}
 	\acro{ECC}{ERP Central Component}
+	\acro{GUI}{Graphical User Interface}
+	\acro{MVC}[MVC]{Model View Controller}
 	\acro{PBO}{Process Before Output}
 	\acro{PAI}{Process After Input}
-	\acro{ALV}{ABAP List View}
-	\acro{ERM}{En\-ti\-ty-Re\-la\-tion\-ship-Mo\-dell}
-	\acro{UML}{Unified Modeling language}
 	\acro{RFC}{Remote Function Call}
-	\acro{MVC}[MVC]{Model View Controller}
+	\acro{UML}{Unified Modeling language}
 \end{acronym}
