--- a/Allgemein/Packages.tex
+++ b/Allgemein/Packages.tex
@@ -22,6 +22,7 @@
 \usepackage{array}
 \usepackage{ragged2e}
 \usepackage{lscape}
+\usepackage{tabu}
 \newcolumntype{w}[1]{>{\raggedleft\hspace{0pt}}p{#1}} % Spaltendefinition rechtsbündig mit definierter Breite
 
 % Grafiken ---------------------------------------------------------------------
