--- a/Anhang.tex
+++ b/Anhang.tex
@@ -8,9 +8,14 @@
 \input{Anhang/AnhangLastenheft.tex}
 \clearpage
 
+\subsection{Iterationsplan}
+\label{app:Iterationsplan}
+
+\input{Anhang/AnhangIterationsplan.tex}
+\clearpage
+
 \subsection{Use Case-Diagramm}
 \label{app:UseCase}
-Use Case-Diagramme und weitere \acs{UML}-Diagramme kann man auch direkt mit \LaTeX{} zeichnen, siehe \zB \url{http://metauml.sourceforge.net/old/usecase-diagram.html}.
 \begin{figure}[htb]
 \centering
 \includegraphicsKeepAspectRatio{UseCase.pdf}{0.7}
@@ -18,28 +23,14 @@ Use Case-Diagramme und weitere \acs{UML}-Diagramme kann man auch direkt mit \LaT
 \end{figure}
 
 \input{Anhang/AnhangPflichtenheft.tex}
-F
-\subsection{Datenbankmodell}
-\label{app:Datenbankmodell}
-ER-Modelle kann man auch direkt mit \LaTeX{} zeichnen, siehe \zB \url{http://www.texample.net/tikz/examples/entity-relationship-diagram/}.
-\begin{figure}[htb]
-\centering
-\includegraphicsKeepAspectRatio{database.pdf}{1}
-\caption{Datenbankmodell}
-\end{figure}
+
+\clearpage
+\input{Anhang/AnhangDictionary-Objekte.tex}
 \clearpage
 
-\input{Anhang/AnhangEntwuerfe.tex}
-\clearpage
 \input{Anhang/AnhangScreenshots.tex}
-\input{Anhang/AnhangDoc.tex}
 \clearpage
-\input{Anhang/AnhangTest.tex}
-
-\subsection{Klasse: ComparedNaturalModuleInformation}
-\label{app:CNMI}
-Kommentare und simple Getter/Setter werden nicht angezeigt.
-\lstinputlisting[language=php, caption={Klasse: ComparedNaturalModuleInformation}]{Listings/cnmi.php}
+\input{Anhang/AnhangProgrammingGuidlines.tex}
 \clearpage
 
 \subsection{Klassendiagramm}
@@ -51,5 +42,3 @@ Klassendiagramme und weitere \acs{UML}-Diagramme kann man auch direkt mit \LaTeX
 \caption{Klassendiagramm}
 \end{figure}
 \clearpage
-
-\input{Anhang/AnhangBenutzerDoku.tex}
