--- a/Anhang/AnhangScreenshots.tex
+++ b/Anhang/AnhangScreenshots.tex
@@ -2,13 +2,61 @@
 \label{Screenshots}
 \begin{figure}[htb]
 \centering
-\includegraphicsKeepAspectRatio{tagliste.pdf}{1}
-\caption{Anzeige und Filterung der Module nach Tags}
+\includegraphicsKeepAspectRatio{AdministrationScreenECC.png}{1}
+\caption{Ändern des Feldnamens für den Kommentar in der AUFK Datenbanktabelle}
 \end{figure}
 \clearpage
 \begin{figure}[htb]
 \centering
-\includegraphicsKeepAspectRatio{modulliste.pdf}{1}
-\caption{Liste der Module mit Filtermöglichkeiten}
+\includegraphicsKeepAspectRatio{MaintenanceSelScreenECC.png}{1}
+\caption{Selektionsbildschirm für den Maintenance Screen}
+\end{figure}
+\clearpage
+\begin{figure}[htb]
+\centering
+\includegraphicsKeepAspectRatio{MaintenanceALVScreenECC.png}{1}
+\caption{}
+\end{figure}
+\clearpage
+\begin{figure}[htb]
+\centering
+\includegraphicsKeepAspectRatio{MaintenanceSelPopupECC.png}{1}
+\caption{}
+\end{figure}
+\clearpage
+\begin{figure}[htb]
+\centering
+\includegraphicsKeepAspectRatio{MaintenanceSelScreenAPO.png}{1}
+\caption{}
+\end{figure}
+\clearpage
+\begin{figure}[htb]
+\centering
+\includegraphicsKeepAspectRatio{MaintenanceALVScreenAPO.png}{1}
+\caption{}
+\end{figure}
+\clearpage
+\begin{figure}[htb]
+\centering
+\includegraphicsKeepAspectRatio{RRP3DisplayMode.png}{1}
+\caption{}
+\end{figure}
+\clearpage
+\begin{figure}[htb]
+\centering
+\includegraphicsKeepAspectRatio{RRP3EditMode.png}{1}
+\caption{}
+\end{figure}
+\clearpage
+\begin{figure}[htb]
+\centering
+\includegraphicsKeepAspectRatio{COR3.png}{1}
+\caption{}
+\end{figure}
+\clearpage
+\begin{figure}[htb]
+\centering
+\includegraphicsKeepAspectRatio{COR2.png}{1}
+\caption{}
 \end{figure}
 \clearpage
