--- a/Inhalt.tex
+++ b/Inhalt.tex
@@ -4,7 +4,5 @@
 \input{Inhalt/Analysephase}
 \input{Inhalt/Entwurfsphase}
 \input{Inhalt/Implementierungsphase}
-\input{Inhalt/Abnahmephase}
-\input{Inhalt/Einfuehrungsphase}
-\input{Inhalt/Dokumentation}
+\input{Inhalt/Qualitätssicherung}
 \input{Inhalt/Fazit}
