--- a/Inhalt/Analysephase.tex
+++ b/Inhalt/Analysephase.tex
@@ -2,21 +2,26 @@
 \section{Analysephase} 
 \label{sec:Analysephase}
 
-
 \subsection{Ist-Analyse} 
 \label{sec:IstAnalyse}
-Das Projekt wird im Umfeld der Produktionsplanung durchgeführt und bezieht sich auf alle Zutun Abgangselemente. Der Planer hat im SAP APO (”Advanced Planning \& Optimization”) die	Möglichkeit Zugangs und Abgangselemente manuell anzulegen. In Folgeprozessen kann es zu	Problemen führen, wenn die Gründe dieser Planänderungen nicht sichtbar gemacht werden.	Bisher müssen solche Änderungen ohne Systemunterstützung per Email oder auf anderem Wege an alle beteiligten mitgeteilt werden.
-
+Das Projekt wird im Umfeld der Produktionsplanung durchgeführt und bezieht sich auf alle Zutun Abgangselemente. Der Planer hat im SAP \ac{APO} die	Möglichkeit Zugangs und Abgangselemente manuell anzulegen. In Folgeprozessen kann es zu	Problemen führen, wenn die Gründe dieser Planänderungen nicht sichtbar gemacht werden. Bisher müssen solche Änderungen ohne Systemunterstützung per Email oder auf anderem Wege an alle beteiligten mitgeteilt werden.
 
 \subsection{Wirtschaftlichkeitsanalyse}
 \label{sec:Wirtschaftlichkeitsanalyse}
 Aufgrund der Probleme, die bereits in der Projektbegründung und der Ist-Analyse beschrieben wurden, ist dieses Projekt absolut notwendig. Trotzdem werde ich in dem folgenden Abschnitt analysieren ob die Umsetzung auch aus Wirtschaftlichen Gesichtspunkten gerechtfertigt ist.
 
-
 \subsubsection{\gqq{Make or Buy}-Entscheidung}
 \label{sec:MakeOrBuyEntscheidung}
-Da wir bereits ein großes Portfolio an verschiedenen Tools im SAP Umfeld haben, welche den Planer unterstützen	
 
+Es gibt nichts vergleichbares auf dem Markt was in dieser Art und weise angeboten wird. 
+
+Wahl zwischen machen und Entwickler kaufen und programmieren lassen
+
+Irwelche Inder kosten  * Zeit.
+Später support schwierig da man entweder die Entwickler halten muss oder sie halt weggehen lässt.
+
+Unkalkulierbare kosten nach Projektabschluss.
+Da wir davon leben Produkte zu entwickeln und zu lizensieren. 
 
 \subsubsection{Projektkosten}
 \label{sec:Projektkosten}
@@ -91,11 +96,9 @@ An der Maschiene kann der arbeiter direkt neben dem auftrag auch den Kommentar s
 
 Use-Case Diagram
 
-
 \subsection{Qualitätsanforderungen}
 \label{sec:Qualitaetsanforderungen}
-z.b Administration nicht in key felder der tabelle schreiben input checks.
-
+Wie in jedem anderen Projekt des Camelot ITLabs gelten auch hier die programming Guidelines. Ein kleine Zusammenfassung mit allen für dieses Projekt wichtigen Punkten findet sich im Anhang \Anhang{app:Programming Guidlines}. Außerdem muss es für den Administration Screen einen Eingabeüberprüfung geben, der verhindert, dass der User Keyfelder bzw. Fleder die es nicht gibt angibt.
 
 \subsection{Lastenheft/Fachkonzept}
 \label{sec:Lastenheft}
