--- a/Tabellen/ZeitplanungKurz.tex
+++ b/Tabellen/ZeitplanungKurz.tex
@@ -7,7 +7,7 @@ Analysephase & 6 \\
 \rowcolor{odd}Entwurfsphase & 6 \\
 Implementierungsphase & 23 \\
 \rowcolor{odd}Testphase/Qualitätssicherung & 6 \\
-Fazitt & 3 \\
+Fazit & 3 \\
 \rowcolor{odd}Dokumentationsphase & 20 \\
 \hline
 \hline
