--- a/Anhang/AnhangLastenheft.tex
+++ b/Anhang/AnhangLastenheft.tex
@@ -2,31 +2,20 @@
 \label{app:Lastenheft}
 Es folgt ein Auszug aus dem Lastenheft mit Fokus auf die Anforderungen:
 
-Die Anwendung muss folgende Anforderungen erfüllen: 
+Die Anwendungen müssen folgende Anforderungen erfüllen: 
 \begin{enumerate}[itemsep=0em,partopsep=0em,parsep=0em,topsep=0em]
-\item Verarbeitung der Moduldaten
-	\begin{enumerate}
-	\item Die Anwendung muss die von Subversion und einem externen Programm bereitgestellten Informationen (z.B. Source-Benutzer, -Datum, Hash) verarbeiten.
-	\item Auslesen der Beschreibung und der Stichwörter aus dem Sourcecode.
-	\end{enumerate}
 \item Darstellung der Daten
 	\begin{enumerate}
-	\item Die Anwendung muss eine Liste aller Module erzeugen inkl. Source-Benutzer und -Datum, letztem Commit-Benutzer und -Datum für alle drei Umgebungen. 
-	\item Verknüpfen der Module mit externen Tools wie z.B. Wiki-Einträgen zu den Modulen oder dem Sourcecode in Subversion.
-	\item Die Sourcen der Umgebungen müssen verglichen und eine schnelle Übersicht zur Einhaltung des allgemeinen Entwicklungsprozesses gegeben werden. 
-	\item Dieser Vergleich muss auf die von einem bestimmten Benutzer bearbeiteten Module eingeschränkt werden können. 
-	\item Die Anwendung muss in dieser Liste auch Module anzeigen, die nach einer Bearbeitung durch den gesuchten Benutzer durch jemand anderen bearbeitet wurden. 
-	\item Abweichungen sollen kenntlich gemacht werden. 
-	\item Anzeigen einer Übersichtsseite für ein Modul mit allen relevanten Informationen zu diesem.
+	\item Die Anwendung muss eine die Funktion bieten die Aufträge zu nach vorgegebenen Kriterien zu filter.
+	\item Die Aufträge müssen in einer, für den Planer guten Umgebung, dargestellt werden.
+	\item Die Aufträge sollen übersichtlich dargestellt werden. 
+	\item Der Planer soll die möglichst einfach und schnell Kommentare schreiben und anzeigen können. 
+	\item Der Planer soll zudem auch in den gewohnten standard Anwendungen Kommentare verfassen und Lesen können 
 	\end{enumerate}
-\item Sonstige Anforderungen
+\item Weitere Anforderungen
 	\begin{enumerate}
-	\item Die Anwendung muss ohne das Installieren einer zusätzlichen Software über einen Webbrowser im Intranet erreichbar sein.
-	\item Die Daten der Anwendung müssen jede Nacht \bzw nach jedem \acs{SVN}-Commit automatisch aktualisiert werden. 
-	\item Es muss ermittelt werden, ob Änderungen auf der Produktionsumgebung vorgenommen wurden, die nicht von einer anderen Umgebung kopiert wurden. Diese Modulliste soll als Mahnung per E-Mail an alle Entwickler geschickt werden (Peer Pressure).
-	\item Die Anwendung soll jederzeit erreichbar sein.
-	\item Da sich die Entwickler auf die Anwendung verlassen, muss diese korrekte Daten liefern und darf keinen Interpretationsspielraum lassen.
-	\item Die Anwendung muss so flexibel sein, dass sie bei Änderungen im Entwicklungsprozess einfach angepasst werden kann.
+	\item Die Anwendungen soll sauber und übersichtlich Programmiert werden, sodass spätere Erweiterungen leicht durchzuführen sind.
+	\item Möglichst wenig Code soll in Userexits oder sonsitgen Erweiterungspunkten geschrieben werden, da dieser immer per Hand beim Kunden eingefügt werden muss.
 	\end{enumerate}
 \end{enumerate}
 
