--- a/Allgemein/Packages.tex
+++ b/Allgemein/Packages.tex
@@ -74,12 +74,12 @@
     bookmarksopenlevel=1,
     colorlinks=true,
 % diese Farbdefinitionen zeichnen Links im PDF farblich aus
-    linkcolor=AOBlau, % einfache interne Verknüpfungen
-    anchorcolor=AOBlau,% Ankertext
-    citecolor=AOBlau, % Verweise auf Literaturverzeichniseinträge im Text
-    filecolor=AOBlau, % Verknüpfungen, die lokale Dateien öffnen
-    menucolor=AOBlau, % Acrobat-Menüpunkte
-    urlcolor=AOBlau,
+    linkcolor=CamelotBlau, % einfache interne Verknüpfungen
+    anchorcolor=CamelotBlau,% Ankertext
+    citecolor=CamelotBlau, % Verweise auf Literaturverzeichniseinträge im Text
+    filecolor=CamelotBlau, % Verknüpfungen, die lokale Dateien öffnen
+    menucolor=CamelotBlau, % Acrobat-Menüpunkte
+    urlcolor=CamelotBlau,
 % diese Farbdefinitionen sollten für den Druck verwendet werden (alles schwarz)
     %linkcolor=black, % einfache interne Verknüpfungen
     %anchorcolor=black, % Ankertext
