--- a/Anhang/AnhangScreenshots.tex
+++ b/Anhang/AnhangScreenshots.tex
@@ -9,54 +9,54 @@
 \begin{figure}[htb]
 \centering
 \includegraphicsKeepAspectRatio{MaintenanceSelScreenECC.png}{1}
-\caption{Selektionsbildschirm für den Maintenance Screen}
+\caption{Selektionsbildschirm für den Maintenance Screen im ECC}
 \end{figure}
 \clearpage
 \begin{figure}[htb]
 \centering
 \includegraphicsKeepAspectRatio{MaintenanceALVScreenECC.png}{1}
-\caption{}
+\caption{Aufträge im ALV auf dem Maintenance Screen im ECC}
 \end{figure}
 \clearpage
 \begin{figure}[htb]
 \centering
 \includegraphicsKeepAspectRatio{MaintenanceSelPopupECC.png}{1}
-\caption{}
+\caption{Selektions Popup auf dem Maintenance Screen}
 \end{figure}
 \clearpage
 \begin{figure}[htb]
 \centering
 \includegraphicsKeepAspectRatio{MaintenanceSelScreenAPO.png}{1}
-\caption{}
+\caption{Selektionsbildschirm für den Maintenance Screen im APO}
 \end{figure}
 \clearpage
 \begin{figure}[htb]
 \centering
 \includegraphicsKeepAspectRatio{MaintenanceALVScreenAPO.png}{1}
-\caption{}
+\caption{Aufträge im ALV auf dem Maintenance Screen im APO}
 \end{figure}
 \clearpage
 \begin{figure}[htb]
 \centering
 \includegraphicsKeepAspectRatio{RRP3DisplayMode.png}{1}
-\caption{}
+\caption{Kommentare in der RRP3}
 \end{figure}
 \clearpage
 \begin{figure}[htb]
 \centering
 \includegraphicsKeepAspectRatio{RRP3EditMode.png}{1}
-\caption{}
+\caption{Kommentare in der RRP3 zum editieren}
 \end{figure}
 \clearpage
 \begin{figure}[htb]
 \centering
 \includegraphicsKeepAspectRatio{COR3.png}{1}
-\caption{}
+\caption{Kommentar in der COR3}
 \end{figure}
 \clearpage
 \begin{figure}[htb]
 \centering
 \includegraphicsKeepAspectRatio{COR2.png}{1}
-\caption{}
+\caption{Kommentar in der COR2 zum bearbeiten}
 \end{figure}
 \clearpage
