--- a/Inhalt/Analysephase.tex
+++ b/Inhalt/Analysephase.tex
@@ -13,9 +13,16 @@ Aufgrund der Probleme, die bereits in der Projektbegründung und der Ist-Analyse
 \subsubsection{\gqq{Make or Buy}-Entscheidung}
 \label{sec:MakeOrBuyEntscheidung}
 
-Es gibt nichts vergleichbares auf dem Markt was in dieser Art und weise angeboten wird. 
+Da es etwas vergleichbares auf dem Markt noch nicht gibt und das Camelot ITLab davon lebt Software zu produzieren und zu verkaufen, würde es natürlich nix bringen die Software zu kaufen. Allerdings stellt sich die Frage selbst produzieren oder von einer fremd Firma oder Freelancern im Namen des Camelot ITLabs entwickeln zu lassen. In der Folgende Tabelle werden alle ausschlaggebenden Punkte welche für die jeweilige Option sprechen aufgeführt.
 
-Wahl zwischen machen und Entwickler kaufen und programmieren lassen
+Camelot Style und programming rechtlinien								Bei Problemen oder nicht einhaltung des Zeitplans
+																	    ist der andere Schuld
+Support nach der fertigstellung muss geklärt werden
+
+Kosten rechnung
+
+Aufgrund der oben genannten Punkte wurde entschieden die Software selber zu produzieren. 
+  
 
 Irwelche Inder kosten  * Zeit.
 Später support schwierig da man entweder die Entwickler halten muss oder sie halt weggehen lässt.
@@ -46,7 +53,7 @@ Daraus Ergibt sich dann folgende Rechnung und Stundesatz
 \end{eqnarray}
 
 Es Ergibt sich also ein Stundensatz von 0.3€ für die Hardware Kosten. Dazu kommen natürlich noch Kosten für Arbeitsplatz, Möblierung, Strom und Internet.
-\tabelle{ProjektKosten}{tab:ProjektKosten}{ProjektKosten.tex}
+\tabelle{Projektkosten}{tab:Projektkosten}{Projektkosten.tex}
 
 \subsubsection{Amortisationsdauer}
 \label{sec:Amortisationsdauer}
