--- a/Projektdokumentation.tex
+++ b/Projektdokumentation.tex
@@ -78,6 +78,7 @@
 
 % Literatur ------------------------------------------------------------------
 \clearpage
+\nocite{*}
 \renewcommand{\refname}{Literaturverzeichnis}
 \bibliography{Bibliographie}
 \bibliographystyle{Allgemein/natdin} % DIN-Stil des Literaturverzeichnisses
