--- a/Tabellen/Datenelemente.tex
+++ b/Tabellen/Datenelemente.tex
@@ -1,6 +1,6 @@
-\begin{tabularx}{\textwidth}{lX}
-\rowcolor{heading}\textbf{Name} & \textbf{Domäne} \\
+\begin{tabu}{p{0.5\textwidth}p{0.46\textwidth }}
+\rowfont{\bfseries\leavevmode\color{headingfont}}\rowcolor{heading}\textbf{Name} & \textbf{Domäne} \\
 /camelot/oc\_created\_by & usnam \\
 \rowcolor{odd}/camelot/oc\_created\_on & datum \\
 /camelot/oc\_ord\_comment & /camelot/oc\_ord\_comment \\
-\end{tabularx}
+\end{tabu}
