--- a/Tabellen/Domänen.tex
+++ b/Tabellen/Domänen.tex
@@ -1,4 +1,4 @@
-\begin{tabularx}{\textwidth}{lX}
-	\rowcolor{heading}\textbf{Name} & \textbf{Date Type} \\
-	/camelot/oc\_ord\_comment & char60 \\
-\end{tabularx}
+\begin{tabu}{p{0.5\textwidth}p{0.46\textwidth }}
+\rowfont{\bfseries\leavevmode\color{headingfont}}\rowcolor{heading}\textbf{Name} & \textbf{Date Type} \\
+/camelot/oc\_ord\_comment & char60 \\
+\end{tabu}
