--- a/Tabellen/HardwareKosten.tex
+++ b/Tabellen/HardwareKosten.tex
@@ -1,5 +1,5 @@
-\begin{tabular}{lrlr}
-\rowcolor{heading}\textbf{Gerät} & \textbf{Anzahl} & \textbf{Anschaffungskosten} & \textbf{Gesamt} \\
+\begin{tabu}{lrlr}
+\rowfont{\bfseries\leavevmode\color{headingfont}}\rowcolor{heading}\textbf{Gerät} & \textbf{Anzahl} & \textbf{Anschaffungskosten} & \textbf{Gesamt} \\
 Lenovo ThinkPad T450s & 1 & 1200€ & 1200€\\
 \rowcolor{odd}Dell 24 P2419H 61 & 2 & 170€ & 340€ \\
 Maus und Tastatur & 1 & 20€ & 20€ \\
@@ -7,4 +7,4 @@ Maus und Tastatur & 1 & 20€ & 20€ \\
 \hline
 \hline
 \rowcolor{odd}\textbf{Gesamt} & & & \textbf{1680€} \\
-\end{tabular}
+\end{tabu}
