--- a/Tabellen/Strukturen.tex
+++ b/Tabellen/Strukturen.tex
@@ -1,5 +1,5 @@
-\begin{longtable}{p{0.33\textwidth}p{0.3\textwidth}p{0.3\textwidth }}
-	\rowcolor{heading}\textbf{Name} & \textbf{Componenten} & \textbf{Typen} \\ \hline
+\begin{longtabu}{p{0.33\textwidth}p{0.3\textwidth}p{0.3\textwidth }}
+	\rowfont{\bfseries\leavevmode\color{headingfont}}\rowcolor{heading}\textbf{Name} & \textbf{Componenten} & \textbf{Typen} \\ \hline
 	/camelot/oc\_dats\_range\_s & sign & ddsign \\
 	& option & ddoption \\
 	& low & dats \\ 
@@ -10,7 +10,7 @@
 	& created\_by & /camelot/oc\_created\_on \\
 	& created\_on & /camelot/oc\_created\_by \\ 
 	& start\_date & pm\_ordgstrp \\
-	& end\_date & co\_gltrp \\ \hline
+	& end\_date & co\_gltrp \\
 	& ord\_comment & /camelot/oc\_ord\_comment \\
 	& t\_style & lvc\_t\_style \\
 	& category & char2 \\ \hline
@@ -51,4 +51,4 @@
 	& option & ddoption \\
 	& low & uname \\
 	& high & uname \\ \hline
-\end{longtable}
+\end{longtabu}
