--- a/Tabellen/Tabellentypen.tex
+++ b/Tabellen/Tabellentypen.tex
@@ -1,5 +1,5 @@
-\begin{tabularx}{\textwidth}{lX}
-\rowcolor{heading}\textbf{Name} & \textbf{Zeilentyp} \\
+\begin{tabu}{p{0.5\textwidth}p{0.46\textwidth }}
+\rowfont{\bfseries\leavevmode\color{headingfont}}\rowcolor{heading}\textbf{Name} & \textbf{Zeilentyp} \\
 /camelot/oc\_aufk\_T & aufk \\
 \rowcolor{odd}/camelot/oc\_comt\_t & /camelot/oc\_comt \\
 /camelot/oc\_dats\_range\_t & /camelot/oc\_dats\_range\_s \\
@@ -11,4 +11,4 @@
 /camelot/oc\_plnum\_range\_t & /camelot/oc\_plnum\_range\_s \\
 \rowcolor{odd}/camelot/oc\_screen\_t & screen \\
 /camelot/oc\_uname\_range\_t & /camelot/oc\_uname\_range\_s \\
-\end{tabularx}
+\end{tabu}
