--- a/Allgemein/Befehle.tex
+++ b/Allgemein/Befehle.tex
@@ -58,7 +58,7 @@
 \includegraphics[{#1}]{#2}}%
 }
 
-\definecolor{AOBlau}{rgb}{0, 0.28, 0.56}
+\definecolor{CamelotBlau}{rgb}{0.12,0.19,0.36}
 
 % verschiedene Befehle um Wörter semantisch auszuzeichnen ----------------------
 \newcommand{\Index}[2][\empty]{\ifthenelse{\equal{#1}{\empty}}{\index{#2}#2}{\index{#1}#2}}
