--- a/Allgemein/Seitenstil.tex
+++ b/Allgemein/Seitenstil.tex
@@ -76,5 +76,6 @@
 \renewcommand{\labelenumiii}{\arabic{enumi}.\arabic{enumii}.\arabic{enumiii}}
 
 % Tabellenfärbung:
-\definecolor{heading}{rgb}{0.64,0.78,0.86}
+\definecolor{heading}{rgb}{0.12,0.19,0.36}
+\definecolor{headingfont}{rgb}{1,1,1}
 \definecolor{odd}{rgb}{0.9,0.9,0.9}
