--- a/Inhalt/Analysephase.tex
+++ b/Inhalt/Analysephase.tex
@@ -43,8 +43,8 @@ Die Projektkosten, die während dem gesamten Entwicklungszeitraum anfangen solle
 	
 Der Rechnung zufolge beträgt der Stundensatz eines Azubis ca. 7€ die Stunde und die kosten eines normalen Mitarbeiters schätze ich auf 25€ die Stunde. Für die Ressourcen werden die gesamten Hardwarekosten addiert und dann durch die durchschnittliche Lebenszeit in Arbeitsstunden, d.h. 3 * 365 * 5/7 * 8 geteilt.
 	
-Tabelle~\ref{tab:HardwareKosten} zeigt die Hardwarekosten, die für die Geräte eines Mitarbeiters anfallen.
-\tabelle{HardwareKosten}{tab:HardwareKosten}{HardwareKosten}\\
+Tabelle~\ref{tab:Hardwarekosten} zeigt die Hardwarekosten, die für die Geräte eines Mitarbeiters anfallen.
+\tabelle{Hardwarekosten}{tab:Hardwarekosten}{Hardwarekosten}\\
 	
 Daraus Ergibt sich dann folgende Rechnung und Stundesatz
 \begin{eqnarray}
@@ -98,10 +98,7 @@ Lohnt sich das Projekt für den Kunden was wir gespart weniger fehler usw. alles
 
 \subsection{Anwendungsfälle}
 \label{sec:Anwendungsfaelle}
-
-An der Maschiene kann der arbeiter direkt neben dem auftrag auch den Kommentar sehen.
-
-Use-Case Diagram
+Während der Analysephase wurden einige der typischen Anwendungsfälle, die von den umzusetzenden Programmen und Erweiterungen abgedeckt werden sollen, mittels eines Use-Case-Diagramms zusammengetragen um einen groben Überblick über die diese zu erhalten. Dieses Diagramm befindet sich im \Anhang{app:UseCase}.
 
 \subsection{Qualitätsanforderungen}
 \label{sec:Qualitaetsanforderungen}
