--- a/Inhalt/Einleitung.tex
+++ b/Inhalt/Einleitung.tex
@@ -8,7 +8,7 @@
 
 \subsection{Vorstellung des Betriebs und meiner Selbst} 
 \label{sec:Vorstellung des Betriebs und meiner Selbst}
-	Ich habe meine Ausbildung am 01.März 2017 bei der Spreitzenbarth Consultants GmbH angefangen. Einem kleinen Unternehmen mit 50 Mitarbeitern mit Fokus auf Supply Chain Management, dort habe ich hauptsächlich Web Anwendungen mit ASP.NET und AngularJs gemacht. Aufgrund einer Firmen Auflösung habe ich zum 01.06.2018 meinen Ausbildungsbetrieb gewechselt und bin zu Camelot gekommen. Dort habe ich mich dann mit ABAP und dem SAP Umfeld betätigt.
+	Ich habe meine Ausbildung am 01.März 2017 bei der Spreitzenbarth Consultants GmbH angefangen. Einem kleinen Unternehmen mit 50 Mitarbeitern mit Fokus auf Supply Chain Management, dort habe ich hauptsächlich Web Anwendungen mit ASP.NET und AngularJs gemacht. Aufgrund einer Firmen Auflösung habe ich zum 01.06.2018 meinen Ausbildungsbetrieb gewechselt und bin zu Camelot gekommen. Dort habe ich mich dann mit \ac{ABAP} und dem SAP Umfeld betätigt.
 
 
 \subsection{Projektziel} 
@@ -23,9 +23,10 @@
 
 \subsection{Projektbeteiligte Personen} 
 \label{sec:Projektbeteiligte Personen}
-Tabelle~\ref{tab:BeteiligtePersonen} zeigt alle Personen die an dem Projekt beteiligt waren.
-\tabelle{BeteiligtePersonen}{tab:BeteiligtePersonen}{BeteiligtePersonen}\\
+Tabelle~\ref{tab:BeteiligtePer} zeigt alle Personen die an dem Projekt beteiligt waren.
+\tabelle{Beteiligte Personen}{tab:BeteiligtePer}{BeteiligtePersonen}
 
 
 \subsection{Projektbegründung} 
 \label{sec:Projektbegruendung}
+Das Projekt wurde von dem Camelot ITLab angenommen, da es eine häufig von Kunden angefragtes Feature ist, welches in der standard SAP Lösung fehlt.   
