--- a/Inhalt/Fazit.tex
+++ b/Inhalt/Fazit.tex
@@ -4,10 +4,9 @@
 
 \subsection{Soll-/Ist-Vergleich}
 \label{sec:SollIstVergleich}
+Die Zeit von 70 Stunden und der in Abschnitt ~\ref{sec:Projektphasen} (\nameref{sec:Projektphasen}) erstellte Projektplan wurden insgesamt eingehalten auch wenn es bei den einzelnen Projektphasen zu Verschiebungen gekommen ist. Die Implementierung im \ac{ECC} System hat etwas länger gedauert als zuerst angenommen, dafür konnte ein Großteil der Logik ins \ac{APO} System kopiert und hier einige Zeit gespart werden. In der Tabelle ~\ref{tab:Soll-/Ist-Vergleich}: ~\nameref{tab:Soll-/Ist-Vergleich} wird die tatsächlich benötigte Zeit gegenüber die geplante Zeit gestellt und verglichen.
+\tabelle{Soll-/Ist-Vergleich der Projektphasen Zeitplanung}{tab:Soll-/Ist-Vergleich}{Zeitnachher}
 
 \subsection{Ausblick}
 \label{sec:Ausblick}
-
-\begin{itemize}
-	\item Wie wird sich das Projekt in Zukunft weiterentwickeln (\zB geplante Erweiterungen)?
-\end{itemize}
+Alle im Lastenheft definierten Anforderungen konnten erfüllt werden, nichts desto trotz möchte ich hier einen kleinen Ausblick über mögliche weiter Feature geben die während der Entwicklung aufgefallen und als praktisch erachtet wurden. Zum einen gibt es noch weitere Transaktionen die erweiter werden können wie z.B. die Feinplantafel um den Planer noch mehr Komfort zu bieten. Außerdem soll man in einer späteren Version im \ac{ECC} im Administration Screen nicht nur einen Feldnamen angeben können, sondern auch die Datenbanktabelle bzw. mehrere Einträge vornehmen können. Aufgrund des in Abschnitt ~\ref{sec:Architecturedesign} beschriebenen Aufbaus des Programms lassen sich Änderungen und Anpassungen sehr einfach vornehmen. Außerdem erhöht dies die Wartbarkeit der Programme, da alle Mitarbeiter des Camelot ITLabs sich besondern mit dieser Struktur auskennen. 
