--- a/Inhalt/Projektplanung.tex
+++ b/Inhalt/Projektplanung.tex
@@ -14,9 +14,9 @@ Eine detailliertere Zeitplanung findet sich im \Anhang{app:Zeitplanung}.
 
 \subsection{Ressourcenplanung}
 \label{sec:Ressourcenplanung}
-In der Ressourcenübersicht, welche sich im Anhang befindet, sind alle Ressourcen aufgelistet, die für das Projekt eingesetzt wurden. Damit sind sowohl Hardware, Software und das Personal gemeint. Es wurde darauf geachtet, dass nur Software zum Einsatz kommt welche entweder kostenfrei (z.B. als Freeware oder gar Open Source) angeboten werden oder die Camelot AG bereits Lizenzen für diese besitzt und zur Verfügung stellen kann. Dadurch sollen die Projektkosten möglichst geringgehalten werden. 
+In der Ressourcenübersicht, welche sich im Anhang befindet, sind alle Ressourcen aufgelistet, die für das Projekt eingesetzt wurden. Damit sind sowohl Hardware, Software und das Personal gemeint. Es wurde darauf geachtet, dass nur Software zum Einsatz kommt welche entweder kostenfrei (z.B. als Freeware oder gar Open Source) angeboten werden oder die Camelot AG bereits Lizenzen für diese besitzt und zur Verfügung stellen kann. Dadurch sollen die Projektkosten möglichst gering gehalten werden. 
 
 
 \subsection{Entwicklungsprozess}
 \label{sec:Entwicklungsprozess}
-TODO
+Als Entwicklungsprozess wurde ein agiler Entwicklungsprozess gewählt, sodass während der Implementierung nach jeder Iterationsphase eine Rücksprache mit dem Ausbilder, dem Kunden und der Entwicklungsabteilung bestand. Aufgrund dieser Tatsache wurde bei der Projektplanung relativ wenig Zeit für die Entwurfsphase eingeplant, da sich Teile dieser Phase erst während der Entwicklung ergeben. Die stetige Kommunikation mit der Entwicklungsabteilung fördert außerdem das Erzielen eines besseren Resultats.
