--- a/Projektdokumentation.tex
+++ b/Projektdokumentation.tex
@@ -54,10 +54,6 @@
 \listoftables
 \cleardoublepage
 
-\phantomsection
-\lstlistoflistings
-\cleardoublepage
-
 \newcommand{\abkvz}{Abkürzungsverzeichnis}
 \renewcommand{\nomname}{\abkvz}
 \section*{\abkvz}
@@ -79,7 +75,7 @@
 % Literatur ------------------------------------------------------------------
 \clearpage
 \nocite{*}
-\renewcommand{\refname}{Literaturverzeichnis}
+\renewcommand{\refname}{Quellenverzeichnis}
 \bibliography{Bibliographie}
 \bibliographystyle{Allgemein/natdin} % DIN-Stil des Literaturverzeichnisses
 \input{Erklaerung}
