--- a/Tabellen/Strukturen.tex
+++ b/Tabellen/Strukturen.tex
@@ -1,54 +1,54 @@
-\begin{longtabu}{p{0.33\textwidth}p{0.3\textwidth}p{0.3\textwidth }}
-	\rowfont{\bfseries\leavevmode\color{headingfont}}\rowcolor{heading}\textbf{Name} & \textbf{Componenten} & \textbf{Typen} \\ \hline
-	/camelot/oc\_dats\_range\_s & sign & ddsign \\
-	& option & ddoption \\
-	& low & dats \\ 
-	& high & dats \\ \hline
-	/camelot/oc\_gui\_0100\_alv\_s & aufnr & aufnr \\
-	& matnr & matnr \\
-	& werks & werks\_d \\
-	& created\_by & /camelot/oc\_created\_on \\
-	& created\_on & /camelot/oc\_created\_by \\ 
-	& start\_date & pm\_ordgstrp \\
-	& end\_date & co\_gltrp \\
-	& ord\_comment & /camelot/oc\_ord\_comment \\
-	& t\_style & lvc\_t\_style \\
-	& category & char2 \\ \hline
-	/camelot/oc\_gui\_maint\_sel\_s  & s\_selection & /camelot/oc\_gui\_maint\_sel\_s \\
-	& t\_alv\_orders & /camelot/oc\_gui\_0100\_alv\_t \\
-	& s\_alv\_incl & /camelot/oc\_alv\_incl\_s \\
-	& t\_old\_orders & /camelot/oc\_gui\_0100\_alv\_t \\
-	& data\_changed & xfeld \\ \hline
-	/camelot/oc\_gui\_0500\_s & s\_settings & /camelot/oc\_sett \\ \hline
-	/camelot/oc\_gui\_maint\_sel\_s & t\_matnr\_rng & /camelot/oc\_matnr\_range\_t \\
-	& t\_plant\_rng & /camelot/oc\_plant\_range\_t \\
-	& t\_ordnr\_rng & /camelot/oc\_ordnr\_range\_t \\
-	& t\_created\_on\_rng & /camelot/oc\_dats\_range\_t \\
-	& t\_created\_by\_rng & /camelot/oc\_uname\_range\_t \\
-	& t\_start\_date\_rng & /camelot/oc\_dats\_range\_t \\
-	& t\_end\_date\_rng & /camelot/oc\_dats\_range\_t \\
-	& t\_plnum\_rng & /camelot/oc\_plnum\_range\_t \\
-	& modus & char2 \\ \hline
-	/camelot/oc\_matnr\_range\_s & sign & ddsign \\
-	& option & ddoption \\
-	& low & matnr \\
-	& high & matnr \\ \hline
-	/camelot/oc\_ordnr\_range\_s & sign & ddsign \\
-	& option & ddoption \\
-	& low & aufnr \\
-	& high & aufnr \\ \hline
-	/camelot/oc\_ord\_comment\_rfc & aufnr & aufnr \\
-	& ord\_comment & /camelot/oc\_ord\_comment \\ \hline
-	/camelot/oc\_plant\_range\_s & sign & ddsign \\
-	& option & ddoption \\
-	& low & werks\_d \\
-	& high & werks\_d \\ \hline
-	/camelot/oc\_plnum\_range\_s & sign & ddsign \\
-	& option & ddoption \\
-	& low & plnum \\
-	& high & plnum \\ \hline
-	/camelot/oc\_uname\_range\_s & sign & ddsign \\
-	& option & ddoption \\
-	& low & uname \\
-	& high & uname \\ \hline
-\end{longtabu}
+\begin{longtable}{p{0.33\textwidth}p{0.3\textwidth}p{0.3\textwidth }}
+\rowcolor{heading}\rowstyle{\color{white}}\textbf{Name} & \rowstyle{\color{white}}\textbf{Componenten} &\rowstyle{\color{white}}\textbf{Typen} \\\rowstyle{\color{black}}
+/camelot/oc\_dats\_range\_s & sign & ddsign \\
+& option & ddoption \\
+& low & dats \\ 
+& high & dats \\ \hline
+/camelot/oc\_gui\_0100\_alv\_s & aufnr & aufnr \\
+& matnr & matnr \\
+& werks & werks\_d \\
+& created\_by & /camelot/oc\_created\_on \\
+& created\_on & /camelot/oc\_created\_by \\ 
+& start\_date & pm\_ordgstrp \\
+& end\_date & co\_gltrp \\
+& ord\_comment & /camelot/oc\_ord\_comment \\
+& t\_style & lvc\_t\_style \\
+& category & char2 \\ \hline
+/camelot/oc\_gui\_maint\_sel\_s  & s\_selection & /camelot/oc\_gui\_maint\_sel\_s \\
+& t\_alv\_orders & /camelot/oc\_gui\_0100\_alv\_t \\
+& s\_alv\_incl & /camelot/oc\_alv\_incl\_s \\
+& t\_old\_orders & /camelot/oc\_gui\_0100\_alv\_t \\
+& data\_changed & xfeld \\ \hline
+/camelot/oc\_gui\_0500\_s & s\_settings & /camelot/oc\_sett \\ \hline
+/camelot/oc\_gui\_maint\_sel\_s & t\_matnr\_rng & /camelot/oc\_matnr\_range\_t \\
+& t\_plant\_rng & /camelot/oc\_plant\_range\_t \\
+& t\_ordnr\_rng & /camelot/oc\_ordnr\_range\_t \\
+& t\_created\_on\_rng & /camelot/oc\_dats\_range\_t \\
+& t\_created\_by\_rng & /camelot/oc\_uname\_range\_t \\
+& t\_start\_date\_rng & /camelot/oc\_dats\_range\_t \\
+& t\_end\_date\_rng & /camelot/oc\_dats\_range\_t \\
+& t\_plnum\_rng & /camelot/oc\_plnum\_range\_t \\
+& modus & char2 \\ \hline
+/camelot/oc\_matnr\_range\_s & sign & ddsign \\
+& option & ddoption \\
+& low & matnr \\
+& high & matnr \\ \hline
+/camelot/oc\_ordnr\_range\_s & sign & ddsign \\
+& option & ddoption \\
+& low & aufnr \\
+& high & aufnr \\ \hline
+/camelot/oc\_ord\_comment\_rfc & aufnr & aufnr \\
+& ord\_comment & /camelot/oc\_ord\_comment \\ \hline
+/camelot/oc\_plant\_range\_s & sign & ddsign \\
+& option & ddoption \\
+& low & werks\_d \\
+& high & werks\_d \\ \hline
+/camelot/oc\_plnum\_range\_s & sign & ddsign \\
+& option & ddoption \\
+& low & plnum \\
+& high & plnum \\ \hline
+/camelot/oc\_uname\_range\_s & sign & ddsign \\
+& option & ddoption \\
+& low & uname \\
+& high & uname \\ \hline
+\end{longtable}
