--- a/Allgemein/Packages.tex
+++ b/Allgemein/Packages.tex
@@ -19,11 +19,11 @@
 \usepackage{tabularx}
 % für lange Tabellen
 \usepackage{longtable}
-\usepackage{array}
+\usepackage{color, array}
 \usepackage{ragged2e}
 \usepackage{lscape}
 \usepackage{tabu}
-\newcolumntype{w}[1]{>{\raggedleft\hspace{0pt}}p{#1}} % Spaltendefinition rechtsbündig mit definierter Breite
+%\newcolumntype{w}[1]{>{\raggedleft\hspace{0pt}}p{#1}} % Spaltendefinition rechtsbündig mit definierter Breite
 
 % Grafiken ---------------------------------------------------------------------
 \usepackage[dvips,final]{graphicx} % Einbinden von JPG-Grafiken ermöglichen
@@ -102,78 +102,4 @@
     pdfcreator={\autorName},
     pdfsubject={\titel -- \untertitel},
     pdfkeywords={\titel -- \untertitel},
-}
-
-
-% zum Einbinden von Programmcode -----------------------------------------------
-\usepackage{listings}
-\usepackage{xcolor}
-\definecolor{hellgelb}{rgb}{1,1,0.9}
-\definecolor{colKeys}{rgb}{0,0,1}
-\definecolor{colIdentifier}{rgb}{0,0,0}
-\definecolor{colComments}{rgb}{0,0.5,0}
-\definecolor{colString}{rgb}{1,0,0}
-\lstset{
-    float=hbp,
-	basicstyle=\footnotesize,
-    identifierstyle=\color{colIdentifier},
-    keywordstyle=\color{colKeys},
-    stringstyle=\color{colString},
-    commentstyle=\color{colComments},
-    backgroundcolor=\color{hellgelb},
-    columns=flexible,
-    tabsize=2,
-    frame=single,
-    extendedchars=true,
-    showspaces=false,
-    showstringspaces=false,
-    numbers=left,
-    numberstyle=\tiny,
-    breaklines=true,
-    breakautoindent=true,
-	captionpos=b,
-}
-\lstdefinelanguage{cs}{
-	sensitive=false,
-	morecomment=[l]{//},
-	morecomment=[s]{/*}{*/},
-	morestring=[b]",
-	morekeywords={
-		abstract,event,new,struct,as,explicit,null,switch
-		base,extern,object,this,bool,false,operator,throw,
-		break,finally,out,true,byte,fixed,override,try,
-		case,float,params,typeof,catch,for,private,uint,
-		char,foreach,protected,ulong,checked,goto,public,unchecked,
-		class,if,readonly,unsafe,const,implicit,ref,ushort,
-		continue,in,return,using,decimal,int,sbyte,virtual,
-		default,interface,sealed,volatile,delegate,internal,short,void,
-		do,is,sizeof,while,double,lock,stackalloc,
-		else,long,static,enum,namespace,string},
-}
-\lstdefinelanguage{natural}{
-	sensitive=false,
-	morecomment=[l]{/*},
-	morestring=[b]",
-	morestring=[b]',
-	alsodigit={-,*},
-	morekeywords={
-		DEFINE,DATA,LOCAL,END-DEFINE,WRITE,CALLNAT,PARAMETER,USING,
-		IF,NOT,END-IF,ON,*ERROR-NR,ERROR,END-ERROR,ESCAPE,ROUTINE,
-		PERFORM,SUBROUTINE,END-SUBROUTINE,CONST,END-FOR,END,FOR,RESIZE,
-		ARRAY,TO,BY,VALUE,RESET,COMPRESS,INTO,EQ},
-}
-\lstdefinelanguage{php}{
-	sensitive=false,
-	morecomment=[l]{/*},
-	morestring=[b]",
-	morestring=[b]',
-	alsodigit={-,*},
-	morekeywords={
-		abstract,and,array,as,break,case,catch,cfunction,class,clone,const,
-		continue,declare,default,do,else,elseif,enddeclare,endfor,endforeach,
-		endif,endswitch,endwhile,extends,final,for,foreach,function,global,
-		goto,if,implements,interface,instanceof,namespace,new,old_function,or,
-		private,protected,public,static,switch,throw,try,use,var,while,xor
-		die,echo,empty,exit,eval,include,include_once,isset,list,require,
-		require_once,return,print,unset},
 }
