--- a/Allgemein/Seitenstil.tex
+++ b/Allgemein/Seitenstil.tex
@@ -8,7 +8,7 @@
 	automark, % Kapitelangaben in Kopfzeile automatisch erstellen
 	headsepline, % Trennlinie unter Kopfzeile
 	ilines % Trennlinie linksbündig ausrichten
-]{scrpage2}
+]{scrlayer-scrpage}
 
 % Kopf- und Fußzeilen ----------------------------------------------------------
 \pagestyle{scrheadings}
@@ -20,7 +20,7 @@
 \renewcommand{\headfont}{\normalfont} % Schriftform der Kopfzeile
 \ihead{\large{\textsc{\titel}}\\ \small{\untertitel} \\[2ex] \textit{\headmark}}
 \chead{}
-\ohead{\includegraphics[scale=0.2]{\betriebLogo}}
+\ohead{\includegraphics[scale=0.3]{\betriebLogo}}
 \setlength{\headheight}{15mm} % Höhe der Kopfzeile
 %\setheadwidth[0pt]{textwithmarginpar} % Kopfzeile über den Text hinaus verbreitern (falls Logo den Text überdeckt)
 
@@ -62,13 +62,9 @@
 \widowpenalty = 10000
 \displaywidowpenalty = 10000
 
-% Quellcode-Ausgabe formatieren
-\lstset{numbers=left, numberstyle=\tiny, numbersep=5pt, breaklines=true}
-\lstset{emph={square}, emphstyle=\color{red}, emph={[2]root,base}, emphstyle={[2]\color{blue}}}
-
 \counterwithout{footnote}{section} % Fußnoten fortlaufend durchnummerieren
-\setcounter{tocdepth}{\subsubsectionlevel} % im Inhaltsverzeichnis werden die Kapitel bis zum Level der subsubsection übernommen
-\setcounter{secnumdepth}{\subsubsectionlevel} % Kapitel bis zum Level der subsubsection werden nummeriert
+\setcounter{tocdepth}{3} % im Inhaltsverzeichnis werden die Kapitel bis zum Level der subsubsection übernommen
+\setcounter{secnumdepth}{3} % Kapitel bis zum Level der subsubsection werden nummeriert
 
 % Aufzählungen anpassen
 \renewcommand{\labelenumi}{\arabic{enumi}.}
