--- a/Inhalt/Implementierungsphase.tex
+++ b/Inhalt/Implementierungsphase.tex
@@ -12,7 +12,7 @@ Zuerst wurden alle Dictionary-Objekte, welche im \ac{ECC} gebraucht werden, erst
 
 \subsection{Implementierung der Benutzeroberfläche ECC}
 \label{sec:Implementierung der Benutzeroberfläche ECC}
-In der \ac*{GUI} Funktionsgruppe wurden jeweils ein Screen für das Maintenance Programm (Screen 0100) und ein Screen für das Administration Programm (Screen 0500) mithilfe des Screen Panters angelegt und gestaltet. Der Screen 0100 enthält lediglich einen Custom Container, in welchem dann später das \ac*{ALV} angezeigt wird. Der Screen 0500 hat zum jetzigen Zeitpunkt nur ein Label und ein Eingabefeld, dessen Element sich in der Member Struktur des Screens der GUI Klasse befindet. Das \ac{PBO} und das \ac{PAI} der Funktionsgruppe wurde dynamisch programmiert. Das bedeutet, dass je nach Screen die zugehörige Methode in der \ac*{GUI} Klasse aufgerufen wird. Die User Befehle (OK Code) werden in ein Member Feld der GUI Klasse geschrieben. Außerdem wurde für das Maintenance Programm ein extra Selektionsbildschirm angelegt, in welchem man gewisse Parameter wie Benutzer, Auftragsnummer usw. eingeben kann und somit die dargestellten Aufträge gefiltert werden. Screenshots der Anwendung befinden sich unter \Anhang{Screenshots}.
+In der \ac{GUI} Funktionsgruppe wurden jeweils ein Screen für das Maintenance Programm (Screen 0100) und ein Screen für das Administration Programm (Screen 0500) mithilfe des Screen Panters angelegt und gestaltet. Der Screen 0100 enthält lediglich einen Custom Container, in welchem dann später das \ac{ALV} angezeigt wird. Der Screen 0500 hat zum jetzigen Zeitpunkt nur ein Label und ein Eingabefeld, dessen Element sich in der Member Struktur des Screens der \ac{GUI} Klasse befindet. Das \ac{PBO} und das \ac{PAI} der Funktionsgruppe wurde dynamisch programmiert. Das bedeutet, dass je nach Screen die zugehörige Methode in der \ac{GUI} Klasse aufgerufen wird. Die User Befehle (OK Code) werden in ein Member Feld der \ac{GUI} Klasse geschrieben. Außerdem wurde für das Maintenance Programm ein extra Selektionsbildschirm angelegt, in welchem man gewisse Parameter wie Benutzer, Auftragsnummer usw. eingeben kann und somit die dargestellten Aufträge gefiltert werden. Screenshots der Anwendung befinden sich unter \Anhang{Screenshots}.
 
 \paragraph{Beispiel}
 Screenshots der Anwendung in der Entwicklungsphase mit Dummy-Daten befinden sich im \Anhang{Screenshots}.
@@ -23,29 +23,29 @@ Jeder Screen der Funktionsgruppe hat seine eigene \ac{PBO} und \ac{PAI} Methode 
 
 \subsection{Implementierung der Geschäftslogik ECC}
 \label{sec:Implementierung der Geschäftslogik ECC}
-Die eigentliche Geschäftslogik und Datenbank zugriffe finden alle im Controller statt. Hier wurden mehrere Methoden implementiert, welche die gesamten Aufträge, die derzeit unterstützt werden, (Prozessaufträge, Produktionsaufträge aus der AUFK mit join auf die AFKO für Material Infos und Planaufträge aus der PLAF) laden. Außerdem wurde die Speicherlogik implementiert. In der Member Struktur des Screens gibt es zwei Tabellen eine für die Daten, die dann tatsächlich im \ac{ALV} angezeigt werden und eine andere in welcher immer die originalen Daten seit dem letzten speichern drin sind. Beim speichern werden nun diese zwei Tabellen verglichen und so alle Aufträge, welche sich nicht geändert haben aussortiert, sodass die Speicherlogik nur auf die tatsächlich modifizierten oder erstellten Aufträge angewendet wird. Diese Aufträge werden dann mithilfe eines RFC ins \ac*{APO} System transferiert. (siehe Kapitel~\ref{sec:Implementierung der Geschäftslogik APO}: \nameref{sec:Implementierung der Geschäftslogik APO})     
+Die eigentliche Geschäftslogik und Datenbank zugriffe finden alle im Controller statt. Hier wurden mehrere Methoden implementiert, welche die gesamten Aufträge, die derzeit unterstützt werden, (Prozessaufträge, Produktionsaufträge aus der AUFK mit join auf die AFKO für Material Infos und Planaufträge aus der PLAF) laden. Außerdem wurde die Speicherlogik implementiert. In der Member Struktur des Screens gibt es zwei Tabellen eine für die Daten, die dann tatsächlich im \ac{ALV} angezeigt werden und eine andere in welcher immer die originalen Daten seit dem letzten speichern drin sind. Beim speichern werden nun diese zwei Tabellen verglichen und so alle Aufträge, welche sich nicht geändert haben aussortiert, sodass die Speicherlogik nur auf die tatsächlich modifizierten oder erstellten Aufträge angewendet wird. Diese Aufträge werden dann mithilfe eines RFC ins \ac{APO} System transferiert. (siehe Kapitel~\ref{sec:Implementierung der Geschäftslogik APO}: \nameref{sec:Implementierung der Geschäftslogik APO})     
 
 \subsection{Implementierung der COR Erweiterung}
 \label{sec:Implementierung der COR Erweiterung}   
-Um die COR Transaktion (1-3) zu erweitern musste zunächst einmal ein passender Erweiterungspunkt gefunden werden, zum einen einen Screen Exit und zum anderen zwei Function Exits vor und nach dem laden der Daten hat. Verwendet wurde das Enhancement PPCO0020. Diese bietet alle Komponenten, die ich zum anzeigen der Daten benötige. Zuerst wurde das Screen Exit mit einem Label und einem Eingabefeld erweitert und aktiviert. Dann wurde das \ac*{PBO} Modul um eine Methode erweitert, dass das Eingabefeld in der COR3 deaktiviert wird, da diese Transaktion nur zum Anzeigen ist. Außerdem wurde in dem Top Include eine globale Struktur angelegt, dessen ZZ\_ORDER\_COMMENT Feld hinter dem Eingabe Feld liegt. In dem ersten Function Exit, wird diese Struktur dann gefüllt. Da der Planer aber auch die Möglichkeit haben soll Kommentar von Prozessaufträgen zu ändern bzw. beim anlegen eines Auftrags anzugeben wird noch ein weiterer Funktionsbaustein benötigt, da der oben genannte, keinen Function Exit für das Speichern hat, von wo wir unsere eigene Speicherlogik aus aufrufen können. Hierzu wurde der Erweiterungspunkt PPCO0007 gewählt. Dieser Erweiterungspunkt liefert einen Function Exit aus welchem dann eine statische Methode aus dem Controller aufgerufen wird damit der geänderte Kommentar nicht nur in der AUFK sondern auch in der /CAMELOT/OC\_COMT gespeichert wird. Und wo zu außerdem \ac*{RFC} ausgeführt wird damit der Kommentar ins \ac*{APO} transferiert wird. Näheres (siehe Kapitel~\ref{sec:Implementierung der Geschäftslogik APO}: \nameref{sec:Implementierung der Geschäftslogik APO})
+Um die COR Transaktion (1-3) zu erweitern musste zunächst einmal ein passender Erweiterungspunkt gefunden werden, zum einen einen Screen Exit und zum anderen zwei Function Exits vor und nach dem laden der Daten hat. Verwendet wurde das Enhancement PPCO0020. Diese bietet alle Komponenten, die ich zum anzeigen der Daten benötige. Zuerst wurde das Screen Exit mit einem Label und einem Eingabefeld erweitert und aktiviert. Dann wurde das \ac{PBO} Modul um eine Methode erweitert, dass das Eingabefeld in der COR3 deaktiviert wird, da diese Transaktion nur zum Anzeigen ist. Außerdem wurde in dem Top Include eine globale Struktur angelegt, dessen ZZ\_ORDER\_COMMENT Feld hinter dem Eingabe Feld liegt. In dem ersten Function Exit, wird diese Struktur dann gefüllt. Da der Planer aber auch die Möglichkeit haben soll Kommentar von Prozessaufträgen zu ändern bzw. beim anlegen eines Auftrags anzugeben wird noch ein weiterer Funktionsbaustein benötigt, da der oben genannte, keinen Function Exit für das Speichern hat, von wo wir unsere eigene Speicherlogik aus aufrufen können. Hierzu wurde der Erweiterungspunkt PPCO0007 gewählt. Dieser Erweiterungspunkt liefert einen Function Exit aus welchem dann eine statische Methode aus dem Controller aufgerufen wird damit der geänderte Kommentar nicht nur in der AUFK sondern auch in der /CAMELOT/OC\_COMT gespeichert wird. Und wo zu außerdem \ac{RFC} ausgeführt wird damit der Kommentar ins \ac{APO} transferiert wird. Näheres (siehe Kapitel~\ref{sec:Implementierung der Geschäftslogik APO}: \nameref{sec:Implementierung der Geschäftslogik APO})
 
 \subsection{Implementierung der Datenstruktur APO}
 \label{sec:Implementierung der Datenstruktur APO} 
-Nachdem im \ac*{ECC} System nun alles Implementiert, muss nun ein großteil der selben Datenstrukturen auch im \ac*{APO} angelegt werden. Eine Liste aller Dictionary-Objekte kann dem Anhang entnommen werden. Außerdem wurde die /SAPAPO/ORDFLDS Datenbank Tabelle um ein Feld, ORDER\_COMMENT, erweitert. Im \ac*{APO} wird keine extra Datenbank wie im \ac*{ECC} benötigt, da für alle Aufträge die /SAPAPO/ORDFLDS Tabelle benutzt werden kann.
+Nachdem im \ac{ECC} System nun alles Implementiert, muss nun ein großteil der selben Datenstrukturen auch im \ac{APO} angelegt werden. Eine Liste aller Dictionary-Objekte kann dem Anhang entnommen werden. Außerdem wurde die /SAPAPO/ORDFLDS Datenbank Tabelle um ein Feld, ORDER\_COMMENT, erweitert. Im \ac{APO} wird keine extra Datenbank wie im \ac{ECC} benötigt, da für alle Aufträge die /SAPAPO/ORDFLDS Tabelle benutzt werden kann.
 
 \paragraph{Beispiel}
 Screenshots der Anwendung in der Entwicklungsphase mit Dummy-Daten befinden sich im \Anhang{Screenshots}.
 
 \subsection{Implementierung der Benutzeroberfläche APO}
 \label{sec:Implementierung der Benutzeroberfläche APO} 
-Ähnlich wie im \ac*{ECC} musste ein Screen(0100) erstellt werden, auf welchem das \ac*{ALV} mit den Auftragsdaten und dem Kommentar angezeigt wird. Der zweite Screen, welchem im ECC angelegt wurde, wird im \ac*{APO} nicht benötigt, da automatisch alle Kommentaren in der /SAPAPO/ORDFLDS im Feld ORDER\_COMMENT gespeichert werden. Der Screen 0100 ist genauso aufgebaut wie im \ac*{ECC} nur der Selektionsbildschirm fällt zum jetzigen Zeitpunkt deutlich kleiner aus, da man nur nach Order Number filtern kann.  
+Ähnlich wie im \ac{ECC} musste ein Screen(0100) erstellt werden, auf welchem das \ac{ALV} mit den Auftragsdaten und dem Kommentar angezeigt wird. Der zweite Screen, welchem im \ac{ECC} angelegt wurde, wird im \ac{APO} nicht benötigt, da automatisch alle Kommentaren in der /SAPAPO/ORDFLDS im Feld ORDER\_COMMENT gespeichert werden. Der Screen 0100 ist genauso aufgebaut wie im \ac{ECC} nur der Selektionsbildschirm fällt zum jetzigen Zeitpunkt deutlich kleiner aus, da man nur nach Order Number filtern kann.  
 
 \subsection{Implementierung der Geschäftslogik APO}
 \label{sec:Implementierung der Geschäftslogik APO}  
-Wie im ECC findet auch im APO die gesamte Geschäftlogik im Controller statt. Neben den selben Klassen welche es auch im ECC gibt(Constants, Controller, GUI, ALV) gibt es eine extra Klasse mit dem Namen /CAMELOT/CL\_OC\_RRP, welche für die \ac*{BAdI}s der RRP3 genutzt wird. Außerdem gibt es neben der Funktionsgruppe welche für das Hauptprogramm genutzt wird eine weiter Funktionsgruppe /CAMELOT/OC\_COMMENT mit der Methode /CAMELOT/OC\_COMMENT\_SYNC welche Remote-Enabled ist. Das bedeutet sie kann aus einem anderen System heraus aufgerufen werden. Diese Methode hat als import paramter eine Tabelle mit dem Tabellentyp /CAMELOT/OC\_ORD\_COMMENT\_RFC\_T (siehe \Anhang{Dictionary-Objekte}). Die Strukture der Tabelle beinhaltet nur die Auftragsnummer und den Kommentar um den Traffic möglichst gering zu halten. Die Methode selber sucht mithilfe eines SAP Funktions Modules /SAPAPO/DM\_ORDER\_GET\_ORDID die richtige orderid zu der gegebenen Auftragsnummer. Mithilfe der Orderid und dem Kommentar wird dann die /SAPAPO/ORDFLDS Tabelle geupdatet.  
+Wie im ECC findet auch im APO die gesamte Geschäftlogik im Controller statt. Neben den selben Klassen welche es auch im ECC gibt(Constants, Controller, \ac{GUI}, \ac{ALV}) gibt es eine extra Klasse mit dem Namen /CAMELOT/CL\_OC\_RRP, welche für die \ac{BAdI}s der RRP3 genutzt wird. Außerdem gibt es neben der Funktionsgruppe welche für das Hauptprogramm genutzt wird eine weiter Funktionsgruppe /CAMELOT/OC\_COMMENT mit der Methode /CAMELOT/OC\_COMMENT\_SYNC welche Remote-Enabled ist. Das bedeutet sie kann aus einem anderen System heraus aufgerufen werden. Diese Methode hat als import paramter eine Tabelle mit dem Tabellentyp /CAMELOT/OC\_ORD\_COMMENT\_RFC\_T (siehe \Anhang{Dictionary-Objekte}). Die Strukture der Tabelle beinhaltet nur die Auftragsnummer und den Kommentar um den Traffic möglichst gering zu halten. Die Methode selber sucht mithilfe eines SAP Funktions Modules /SAPAPO/DM\_ORDER\_GET\_ORDID die richtige orderid zu der gegebenen Auftragsnummer. Mithilfe der Orderid und dem Kommentar wird dann die /SAPAPO/ORDFLDS Tabelle geupdatet.  
 
 \subsection{Implementierung der RRP3 Erweiterung}
 \label{sec:Implementierung der RRP3 Erweiterung}   
-Um die RRP3 zu erweitern wurde nicht wie bei der COR1-3 Customer-Exits, sondern ein \ac*{BAdI} verwendet. Der Unterschied zwischen einem Customer-Exits und einem \ac*{BAdI} ist, dass der \ac*{BAdI} die neuere Objektorientierte Variante eines Customer-Exits ist. Statt in Funktionsmodule Code einzufügen wird eine vordefinierte Klasse implementiert deren Methoden wie bei den alten Customer-Exits zu einem bestimmten Zeitpunkt aufgerufen werden. Für diese RRP3 erweiterung wurden der \ac*{BAdI} /SAPAPO/RRP\_IO\_COL benötigt, um an den Feldkatalog der RRP3 das Feld Order\_Comment anzufügen und diese dann auch mittels einer zweiten Methode zu befüllen. Außerdem musste eine Implicites Enhancement angelegt werden, da es mithilfe von Customer-Exits oder \ac*{BAdI}s nicht möglich war die t-style tabelle der einzelnen Elemente in der \ac*{ALV} Tabelle zu ändern, was allerding absolut notwendig ist um z.B. den Kommentar editierbar zu machen. Die jeweiligen Methoden des \ac*{BAdI}s und des Impliciten Enhancements rufen eine statische Methode in meiner RRP3 Klasse auf, welche genau den selben Namen hat wie die eigentliche Methode, um sie später gut bei Kunden einzubinden, welche dann wiederum dann wiederum die Instance des Controllers bekommt und eine Methode aufruft.
+Um die RRP3 zu erweitern wurde nicht wie bei der COR1-3 Customer-Exits, sondern ein \ac{BAdI} verwendet. Der Unterschied zwischen einem Customer-Exits und einem \ac{BAdI} ist, dass der \ac{BAdI} die neuere Objektorientierte Variante eines Customer-Exits ist. Statt in Funktionsmodule Code einzufügen wird eine vordefinierte Klasse implementiert deren Methoden wie bei den alten Customer-Exits zu einem bestimmten Zeitpunkt aufgerufen werden. Für diese RRP3 erweiterung wurden der \ac{BAdI} /SAPAPO/RRP\_IO\_COL benötigt, um an den Feldkatalog der RRP3 das Feld Order\_Comment anzufügen und diese dann auch mittels einer zweiten Methode zu befüllen. Außerdem musste eine Implicites Enhancement angelegt werden, da es mithilfe von Customer-Exits oder \ac{BAdI}s nicht möglich war die t-style tabelle der einzelnen Elemente in der \ac{ALV} Tabelle zu ändern, was allerding absolut notwendig ist um z.B. den Kommentar editierbar zu machen. Die jeweiligen Methoden des \ac{BAdI}s und des Impliciten Enhancements rufen eine statische Methode in meiner RRP3 Klasse auf, welche genau den selben Namen hat wie die eigentliche Methode, um sie später gut bei Kunden einzubinden, welche dann wiederum dann wiederum die Instance des Controllers bekommt und eine Methode aufruft.
 
 \Zwischenstand{Implementierungsphase}{Implementierung}
